// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders correctly with props 1`] = `
<div>
  <header>
    <h1
      class="isFullscreen"
      css="[object Object]"
    >
      <a
        href="/"
      >
        EYESBOUND
      </a>
    </h1>
    <nav
      class="isFullscreen"
      css="[object Object]"
    >
      <ul>
        <li>
          <a
            href="/picture"
          >
            Overview
          </a>
        </li>
        <li>
          <a
            href="/series/shuttered"
          >
            »Shuttered«
          </a>
        </li>
        <li>
          <a
            href="/category/architecture"
          >
            Architecture
          </a>
        </li>
        <li>
          <a
            href="/category/environment"
          >
            Environment
          </a>
        </li>
        <li>
          <a
            href="/category/floral"
          >
            Floral
          </a>
        </li>
        <li>
          <a
            href="/category/light"
          >
            Light
          </a>
        </li>
        <li>
          <a
            href="/worldmap"
          >
            Worldmap
          </a>
        </li>
        <li>
          <a
            href="/imprint"
          >
            Contact
          </a>
        </li>
      </ul>
      <div>
        Menu
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header renders correctly without props 1`] = `
<div>
  <header>
    <h1
      class=""
      css="[object Object]"
    >
      <a
        href="/"
      >
        EYESBOUND
      </a>
    </h1>
    <nav
      class=""
      css="[object Object]"
    >
      <ul>
        <li>
          <a
            href="/picture"
          >
            Overview
          </a>
        </li>
        <li>
          <a
            href="/series/shuttered"
          >
            »Shuttered«
          </a>
        </li>
        <li>
          <a
            href="/category/architecture"
          >
            Architecture
          </a>
        </li>
        <li>
          <a
            href="/category/environment"
          >
            Environment
          </a>
        </li>
        <li>
          <a
            href="/category/floral"
          >
            Floral
          </a>
        </li>
        <li>
          <a
            href="/category/light"
          >
            Light
          </a>
        </li>
        <li>
          <a
            href="/worldmap"
          >
            Worldmap
          </a>
        </li>
        <li>
          <a
            href="/imprint"
          >
            Contact
          </a>
        </li>
      </ul>
      <div>
        Menu
      </div>
    </nav>
  </header>
</div>
`;
